rds.tf
resource "aws_db_parameter_group" "example" {
  name   = "example"
  family = "mysql5.7"

  parameter {
    name  = "character_set_database"
    value = "utf8mb4"
  }

  parameter {
    name  = "character_set_server"
    value = "utf8mb4"
  }
}

resource "aws_db_option_group" "example" {
  name                 = "example"
  engine_name          = "mysql"
  major_engine_version = "5.7"

  option {
    option_name = "MARIADB_AUDIT_PLUGIN"
  }
}

resource "aws_db_subnet_group" "example" {
  name       = "example"
  subnet_ids = [aws_subnet.private_0.id, aws_subnet.private_1.id]
}

resource "aws_db_instance" "example" {
  identifier        = "example"
  engine            = "mysql"
  engine_version    = "5.7.23"
  instance_class    = "db.t3.small"
  allocated_storage = 20
  storage_type      = "gp2"
  storage_encrypted = true
  kms_key_id        = aws_kms_key.example.arn
  username          = "admin"
  // 平文でtfstateファイルに書き込まれてしまうので
  // apply後に下記のコマンドでマスターパスワードを更新する
  // aws rds modify-db-instance --db-instance-identifier 'example' --master-user-password 'NewMasterPassword!'
  password                   = "VeryStrongPassword!"
  multi_az                   = true
  publicly_accessible        = false
  backup_window              = "09:10-09:40"
  backup_retention_period    = 30
  maintenance_window         = "mon:10:10-mon:10:40"
  auto_minor_version_upgrade = false
  # サンプルだからfalseにしとく
  deletion_protection = false
  # サンプルだからtrueにしとく
  skip_final_snapshot = true
  port                = 3306
  # サンプルだからtrueにしとく
  apply_immediately      = true
  vpc_security_group_ids = [module.mysql_sg.security_group_id]
  parameter_group_name   = aws_db_parameter_group.example.name
  option_group_name      = aws_db_option_group.example.name
  db_subnet_group_name   = aws_db_subnet_group.example.name

  lifecycle {
    ignore_changes = [password]
  }
}
